[metadata]
name = raspored
author = Igor Dejanovic
author_email = igor.dejanovic@gmail.com
license = MIT
description = Analiza i izveštavanje o rasporedu nastave i zauzeću prostorija na FTN-u
keywords = textX
url = 
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Software Development :: Interpreters
    Topic :: Software Development :: Compilers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = False
install_requires =
    textX[cli]
    requests-html
include_package_data = True
package_dir =
    raspored = raspored

[options.extras_require]
dev =
    wheel
    twine
test =
    flake8
    tox
    coverage
    coveralls
    pytest

[options.package_data]
    raspored = *.tx

[options.entry_points]
textx_languages =
    raspored = raspored:raspored_language

textx_generators =
    raspored_izvestaj = raspored:generate_izvestaj
    raspored_izvestajlabs = raspored:generate_izvestaj_labs

[bdist_wheel]
universal = 1

[flake8]
exclude = .git/*,.eggs/*,.tox/*, build/*, dist/*, venv/*
max-line-length = 90
